Fixado versão do node e configurado flag do puppeter

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
 	"name": "webscrapper2",
+	"engines": {
+		"node": "8.10.0"
+	},
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
